--- a/CSS/style.css
+++ b/CSS/style.css
@@ -412,7 +412,8 @@ div.cardsArticle3container {
 }
 
 .block2a {
-    background-color: rgb(255, 255, 255); 
+    background-color: rgb(255, 255, 255);
+    margin-left: 20px; 
 }
 
 .card25 {
