--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,7 +85,7 @@ ul.subscribe {
     order: 1;
 }
 
-.subscribe {
+.subscribe li a {
     color: var(--colorBlue);
 }
 
@@ -107,16 +107,25 @@ main {
 #search input {
     width: 180px;
     padding: 10px;
-    color: black;
-    margin-left: 10px;
+    border: 1px solid var(--colorGray);  
 }
+
+.mapPoint {
+    display: flex;
+    width: 35px;
+    padding: 9px;
+    border-radius: 15px 0px 0px 15px;
+    background: gray;
+    color: rgb(255, 255, 255);
+}
+
 
 .searchText {
     display: block;
     width: 100px;
-    padding: 10px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    padding: 11px;
+    border: none;
+    border-radius: 0px 15px 15px 0px;
     background: var(--colorBlue);
     color: rgb(255, 255, 255);
 }
@@ -233,15 +242,20 @@ article.article1 h2 {
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
     color: black;
 }
 
+.cardArticle1:hover {
+    box-shadow: 5px 5px 15px rgb(201, 201, 201);
+    transition: 400ms;
+}
+
 a {
-    text-decoration-line: none;
+    text-decoration: none;
 }
 
 .blue {
@@ -250,11 +264,6 @@ a {
 
 .gray {
     color: var(--colorGray);
-}
-
-.cardArticle1:hover {
-    box-shadow: 5px 5px 15px rgb(145, 145, 145);
-    transition: 400ms;
 }
 
 .cardImage1 {
@@ -285,6 +294,7 @@ aside.aside1 {
     font-size: 20px;
     border-radius: 40px;
     margin: auto;
+    height: 700px;
 }
 
 .cardAside1 {
@@ -296,7 +306,7 @@ aside.aside1 {
     margin-top: 20px;
     margin-bottom: 60px;
     margin-left: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -326,7 +336,6 @@ article.article2 {
 div.cardsArticle3container {
     background-color: rgb(255, 255, 255);
     display: flex;
-    flex-wrap: raw;
     margin: auto;
 }
 
@@ -340,7 +349,7 @@ div.cardsArticle3container {
 .card21 {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -360,7 +369,7 @@ div.cardsArticle3container {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
     margin-top: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -376,7 +385,7 @@ div.cardsArticle3container {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
     margin-top: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -399,7 +408,7 @@ div.cardsArticle3container {
 .card24 {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -420,7 +429,7 @@ div.cardsArticle3container {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
     margin-top: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -436,7 +445,7 @@ div.cardsArticle3container {
     border: 5px solid rgb(255, 255, 255);
     width: 100%;
     margin-top: 20px;
-    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    box-shadow: 5px 5px rgba(145, 145, 145, 0.2);
     transition: 400ms;
     border-radius: 15px;
     background: rgb(255, 255, 255);
@@ -455,7 +464,7 @@ div.cardsArticle3container {
 .cardImage3 img {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    height: 140px;
+    height: 160px;
     width: 300px;
     object-fit: cover;
 }
@@ -476,19 +485,20 @@ footer {
     background-color: rgb(255, 255, 255);
     grid-area: footer;
     padding: 10px;
-    font-style: italic;
     font-size: 20px;
     display: flex;
     justify-content:space-around;   
 }
 
+
 footer ul li {
     font-size: 25px;
+    margin-top: 20px;   
 }
 
 footer ul li a {
     font-size: 20px;
-    color: rgb(155, 155, 155);
+    color: rgb(0, 0, 0);
 }
 
 @media screen and (min-width: 376px) and (max-width: 980px) {
@@ -518,7 +528,8 @@ footer ul li a {
     .searchIcon {
         display: block;
         width: 40px;
-        padding: 10px;
+        padding: 11px;
+        border: none;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
         background: var(--colorBlue);
@@ -596,9 +607,9 @@ footer ul li a {
     .searchIcon {
         display: block;
         width: 40px;
-        padding: 10px;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
+        padding: 12px;
+        border: none;
+        border-radius: 15px;
         background: var(--colorBlue);
         color: rgb(255, 255, 255);
     }
@@ -613,6 +624,7 @@ footer ul li a {
     }
 
     article#article1 {
+        background-color: white;
         margin: auto;
     }
 
@@ -787,7 +799,8 @@ footer ul li a {
     
     .block2a {
         background-color: rgb(255, 255, 255);
-        margin-top: 15px;  
+        margin-top: 15px;
+        margin-left: -1px;  
     }
     
     .card25 {
@@ -849,6 +862,7 @@ footer ul li a {
     }
 
     footer {
+        background-color: rgb(233, 233, 233);
         display: flex;
         flex-direction: column;         
     }
